--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>App</title>
+    <title>%VITE_APP_NAME%</title>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="App" />
+    <meta name="description" content="%VITE_APP_DESCRIPTION%" />
+
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
   </head>
+
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
